Bytt til distroless image