@@ -1,22 +1,7 @@
-FROM eclipse-temurin:20 as jre-build
+FROM cgr.dev/chainguard/jre:latest
 
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
+COPY build/libs/*.jar /app/
 
-# Runtime
-FROM debian:buster-slim
-ENV TZ="Europe/Oslo"
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-COPY --from=jre-build /javaruntime $JAVA_HOME
+ENV LANG='nb_NO.UTF-8' LANGUAGE='nb_NO:nb' LC_ALL='nb:NO.UTF-8' TZ="Europe/Oslo"
 
-COPY build/install/* /
-
-USER nobody
-CMD ["dp-varsel"]
+CMD ["-jar", "app.jar"]
